--- a/index.html
+++ b/index.html
@@ -1,13 +1,44 @@
-    <!DOCTYPE html>
-    <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Gaaa</title>
-    </head>
-    <body>
-        <div>
-            <h1>ehola</h1>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
+    <title>ikon</title>
+  </head>
+  <body>
+    <img src="assets/images/top-circle.svg" alt="top circle" class="bg-image bg-image--top" />
+    <img
+      src="assets/images/bottom-circle.svg"
+      alt="bottom circle"
+      class="bg-image bg-image--bottom"
+    />
+    <article class="card">
+      <header class="card__header">
+        <img src="assets/images/card-pattern.svg" alt="pattern card" class="card__header-image" />
+        <img src="assets/images/victor.jpg" alt="profile image" class="card__header-profile" />
+      </header>
+      <section class="card__body">
+        <p class="card__text">
+          Victor Crest
+          <span class="card_text card_text--light">26</span>
+        </p>
+        <p class="card_text card_text--light">London</p>
+      </section>
+      <footer class="card__footer">
+        <div class="card__stats">
+          <p class="card__number">80K</p>
+          <p class="card_text card_text--light">Followers</p>
         </div>
-    </body>
-    </html>
+        <div class="card__stats">
+          <p class="card__number">803K</p>
+          <p class="card_text card_text--light">Likes</p>
+        </div>
+        <div class="card__stats">
+          <p class="card__number">1.4K</p>
+          <p class="card_text card_text--light">Photos</p>
+        </div>
+      </footer>
+    </article>
+  </body>
+</html>
