--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./style.css" />
-    <title>ikon</title>
+    <link rel="stylesheet" href="./styles.css" />
+    <link rel="icon" href="assets/images/favicon-32x32.png">
+    <title>Reto del perfil</title>
   </head>
   <body>
-    <img src="assets/images/top-circle.svg" alt="top circle" class="bg-image bg-image--top" />
+    <img src="assets/images/bg-pattern-top.svg" alt="top circle" class="bg-image bg-image--top" />
     <img
       src="assets/images/bottom-circle.svg"
       alt="bottom circle"
@@ -15,8 +16,8 @@
     />
     <article class="card">
       <header class="card__header">
-        <img src="assets/images/card-pattern.svg" alt="pattern card" class="card__header-image" />
-        <img src="assets/images/victor.jpg" alt="profile image" class="card__header-profile" />
+        <img src="assets/images/bg-pattern-card.svg" alt="pattern card" class="card__header-image" />
+        <img src="assets/images/image-victor.jpg" alt="profile image" class="card__header-profile" />
       </header>
       <section class="card__body">
         <p class="card__text">
