final ahora ahora si

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles.css" />
     <link rel="icon" href="assets/images/favicon-32x32.png">
-    <title>Reto del perfil</title>
+    <title>Reto del perfil GATO</title>
   </head>
   <body>
     <img src="assets/images/bg-pattern-top.svg" alt="top circle" class="bg-image bg-image--top" />
